profilelist1exp/unpackaged/objects/Partner_Skill_Area__c.object
<CustomObject>
    <description>Partner Skill Area under Account Plan - Partner Business Plan</description>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Skill__c</fullName>
        <label>Partner Detailing</label>
        <referenceTo>Partner_Detailing__c</referenceTo>
        <relationshipName>Skill_Area</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner Skill Areas</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Partner Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Skill Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>